test/corpus/comments.txt
==================
Comment block
==================

// Hello world
// This is a comment
/// This comment do shows up in AST

---

(program
  (developer_comment)
  (developer_comment)
  (comment)
)

==================
Block comment
==================

/* This comment shows up in the AST, just like /// */
model User {
  /* This one works too (attached before the column) */
  id Int /* This one too */ @id
}

---

(program
  (block_comment)
  (model_declaration
    (identifier)
    (statement_block
      (block_comment)
      (column_declaration
        (identifier)
        (column_type
          (identifier))
        (block_comment)
        (attribute
          (identifier)))
    )
  )
)

==================
Multiline block comment
==================

/*
 * This is a
 * multiline block comment
 */
model Post {
  id Int @id
}

---

(program
  (block_comment)
  (model_declaration
    (identifier)
    (statement_block
      (column_declaration
        (identifier)
        (column_type
          (identifier))
        (attribute
          (identifier)))
    )
  )
)

==============
Empty comment
==============

//
model User {
  id Int @id
}

---

(program
  (developer_comment)
  (model_declaration
    (identifier)
    (statement_block
      (column_declaration
        (identifier)
        (column_type
          (identifier))
        (attribute
          (identifier)))
    )
  )
)

=====================
Comment in datasource
=====================

// comment for the developer
datasource pg { // this should be fine
  provider = "postgresql//postgresql" /// This comment is for documentation
  url = env.POSTGRES_URL /// This one as well
  // enabled = true
}

---

(program
  (developer_comment)
  (datasource_declaration
    (identifier)
    (statement_block
      (developer_comment)
      (assignment_expression
        (variable)
        (string)
      )
      (comment)
      (assignment_expression
        (variable)
        (member_expression
          (identifier)
          (property_identifier)
        )
      )
      (comment)
      (developer_comment)
    )
  )
)
